# jsonfold-template

./: .gitignore  DESIGN.md  Logic.md  NAVIGATION.md  Navigation.md  README.md
notes/: 0.3-todo-chatgpt.md  03-todo-claude.md
notes/drafts/: DESIGN.md  Logic.md  Variables.md
python/: Makefile  README.md  TODO.md  design.py  interpolate.jftl.json  pyproject.toml  run.sh
python/data/: copy.jftl.json  country10.jftl.json  country10.json  datasets.jftl.json  lines1.json  stream1.json
python/scripts/: jf_template.py
python/src/: core.py  engine.py  logic.py  navigation.py  py_expr.py  py_run.py  runtime.py  template.py
python/tests/: conftest.py  speed.jftl.json  test_compile.py  test_dataset.py  test_logic_elem.py  test_logic_simple.py  test_nav_integ.py  test_nav_node.py  test_nav_runtime.py  test_pyrun.py  test_reshape.py
tests/: run_jq_tests.sh  run_jqt.sh  run_tests.sh
tests/basic/: def_eng_nav.gold  def_eng_nav.jftl.json  def_eng_py.gold  def_eng_py.jftl.json  drop_missing.gold  drop_missing.jftl.json  flatten.gold  flatten.jftl.json  foreach_bounds.gold  foreach_bounds.jftl.json  frames.gold  frames.jftl.json  from_pairs.gold  from_pairs.jftl.json  global_var.gold  global_var.jftl.json  interpolate.gold  interpolate.jftl.json  logic2.b.inp.json  logic2.c.inp.json  logic2.gold  logic2.jftl.json  merge.gold  merge.jftl.json  multiply.gold  multiply.jftl.json  nav1.a.inp.json  nav1.gold  nav1.jftl.json  nav2.a.inp.json  nav2.b.inp.json  nav2.c.inp.json  nav2.gold  nav2.jftl.json  py1.c.inp.json  py1.gold  py1.jftl.json  pyrun3.jftl.json  skip_var.gold  (+10 more)
(+43 files in other folders)
