[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonfold-template"
version = "0.1.0"
description = "JFTL (JSONFold Template Language) — a JSON-to-JSON transformation language where templates are themselves valid JSON documents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Yair" }]
keywords = ["json", "template", "transformation", "cel", "jftl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

# cel-python (celpy) is the default expression engine per spec: battle-tested,
# sandboxed, portable. Other engines (JEXL, platform-native) are opt-in at
# integration time and are NOT dependencies of the core package.
dependencies = [
    "cel-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
]
# Placeholder for a non-CEL engine extra, e.g.:
# jexl = ["jexl>=0.1"]

[project.urls]
Repository = "https://github.com/yourname/jsonfold-template"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonfold_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
